--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer utilities {
+  .nav {
+    @apply sm:flex flex-col justify-between z-40 w-screen h-20 sm:h-screen sm:w-20 bg-black border-t-[1px] sm:border-r-[1px] border-[#e7e9ea70] fixed bottom-0;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .nav-icon {
+    @apply w-7 h-7 relative sm:hover:bg-gray-800 sm:w-14 sm:h-14 sm:p-3 sm:rounded-full;
+  }
+  .feed-nav {
+    @apply w-[100%] sm:w-[82%] max-w-2xl fixed top-0 z-40 bg-[#00000096] backdrop-blur border-b sm:border-r-[1px] border-[#e7e9ea70];
+  }
+  .feed-type {
+    @apply h-[40px] w-[50%]  flex justify-center relative;
+  }
+  .feed-type-active {
+    @apply w-20 h-1 bg-[#1D9BF0] absolute bottom-0;
+  }
 }
