--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   .nav {
-    @apply sm:flex flex-col justify-between z-40 w-screen h-20 sm:h-screen sm:w-20 bg-black border-t-[1px] sm:border-r-[1px] border-[#e7e9ea70] fixed bottom-0;
+    @apply sm:flex flex-col justify-between z-40 w-screen h-20 sm:h-screen sm:w-20 bg-black border-t-[1px] sm:border-r-[1px] border-[#e7e9ea70] fixed bottom-0 sm:mr-[620px] md:mr-[675px] xl:mr-[1060px];
   }
   .nav-icon {
     @apply w-7 h-7 relative sm:hover:bg-gray-800 sm:w-14 sm:h-14 sm:p-3 sm:rounded-full;
